force-app/main/default/objects/sfLma__Package_Version__c/fields/sfLma__Is_Beta__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Is_Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if the version is beta or has been released</description>
    <label>Beta</label>
    <type>Checkbox</type>
</CustomField>