force-app/main/default/objects/sfLma__Package_Version__c/listViews/sfLma__All.listView-meta.xml
<ListView>
    <fullName>sfLma__All</fullName>
    <columns>NAME</columns>
    <columns>sfLma__Version_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sfLma__Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>